--- a/src/assets/css/scss/components/_poker.scss
+++ b/src/assets/css/scss/components/_poker.scss
@@ -4,13 +4,55 @@
 .card-item-w{
     transform: rotate(90deg);
 }
+.card-banner-banker,.card-banner-player{
+  width:220px;
+  height:50px;
+  border-radius: 100px;
+  top:0;
+  display: flex;
+  align-items: center;
+  z-index: 2;
+  span{
+    width:40px;
+    height:40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+  }
+}
+.card-banner-banker{
+  background: linear-gradient(-90deg,orange 0%,transparent 80%,transparent 100%);
+  justify-content: end;
+  padding-right: 10px;
+  span{
+    box-shadow: inset 0 0 5px rgb(72, 72, 245);
+    text-shadow: 0px 0 5px rgb(248, 248, 184);
+    background-color: rgb(114, 75, 3);
+    border:1px solid rgb(243, 178, 178);
+  }
+}
+.card-banner-player{
+  background: linear-gradient(90deg,blue 0%,transparent 80%,transparent 100%);
+  justify-content: start;
+  padding-left: 10px;
+  span{
+    box-shadow: inset 0 0 5px rgb(72, 72, 245);
+    text-shadow: 0px 0 5px rgb(248, 248, 184);
+    background-color: rgb(1, 1, 66);
+    border:1px solid rgb(156, 156, 248);
+  }
+}
 .player{
-  background-color: rgba(47, 169, 240, 0.849);
+  background: linear-gradient(-90deg,blue 0%,rgba(100, 100, 253, 0.397) 100%);
+  // background-color: rgba(47, 169, 240, 0.849);
   border-top-left-radius:20px;
   border-bottom-left-radius:20px;
 }
 .banker{
-  background-color: #e00000d2;
+  background: linear-gradient(90deg,#e00000d2 0%,#db58586c 100%);
+  // background-color: #e00000d2;
   border-top-right-radius:20px;
   border-bottom-right-radius:20px;
 }
@@ -31,15 +73,9 @@
     box-shadow: -5px 5px 10px rgb(66, 64, 64);
   }
 }
-.playerNum,.bankerNum{
-  position: absolute;
-  font-size:1.5rem;
-}
 .playerNum{
-  left:18%;
-  top:20%;
+  margin-left:120px;
 }
 .bankerNum{
-  right:20%;
-  top:20%;
+  margin-right:125px;
 }
