修改路圖底色和線框顏色

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1853,8 +1853,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   width: 40%;
   /*調整欄寬 */
   height: 100%;
-  background-color: white;
-  /* overflow: hidden; */
+  background-color: black;
 }
 
 .beadPlate-container {
@@ -1889,7 +1888,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .beadPlate-column {
-  border: 1px solid rgba(128, 128, 128, 0.219);
+  border: 1px solid #191919;
   width: 12.5%;
   height: 100%;
   -webkit-box-orient: vertical;
@@ -1903,7 +1902,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .beadPlateGrid-row {
-  border: 1px solid rgba(128, 128, 128, 0.219);
+  border: 1px solid #191919;
   width: 100%;
   height: 16.6666666%;
   -ms-flex-pack: distribute;
@@ -1936,11 +1935,11 @@ a.btn.disabled, fieldset[disabled] a.btn {
 /* 背景格子 */
 .secRoad {
   height: 100%;
-  background-color: white;
+  background-color: black;
 }
 
 .secRoad-column {
-  border: 1px solid rgba(128, 128, 128, 0.219);
+  border: 1px solid #191919;
   width: 4.54545454%;
   /*調整欄寬 */
   height: 100%;
@@ -1954,7 +1953,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 .secRoad-row {
   height: 8.33333333333333333%;
   width: 100%;
-  border: 1px solid rgba(128, 128, 128, 0.219);
+  border: 1px solid #191919;
 }
 
 /* 共用區 */
