--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -8,6 +8,9 @@ $betArea_border:#347553;
 $betArea:#206548;
 $betArea_infoBar:#164531;
 $btnlist_coin:#271604;
+//路圖相關顏色
+$road-bg:black;
+$road-bg-border:#191919;
 
 
 //注意這裡的路徑要放引用的SCSS檔案的相對路徑
