--- a/src/assets/css/scss/components/_beadPlate.scss
+++ b/src/assets/css/scss/components/_beadPlate.scss
@@ -2,8 +2,7 @@
 .beadPlate{
     width:40%;  /*調整欄寬 */
     height:100%;
-    background-color: white;
-    /* overflow: hidden; */
+    background-color: $road-bg;
   }
   .beadPlate-container{
     width:40%;
@@ -27,7 +26,7 @@
     align-items: center;
   }
   .beadPlate-column{
-    border: 1px solid rgba(128, 128, 128, 0.219);
+    border: 1px solid $road-bg-border;
     width:12.5%;
     height: 100%;
     flex-direction: column;
@@ -35,7 +34,7 @@
     align-items: center;
   }
   .beadPlateGrid-row{
-     border: 1px solid rgba(128, 128, 128, 0.219);
+     border: 1px solid $road-bg-border;
      width:100%;
      height:16.6666666%;
      justify-content: space-around;
