--- a/src/assets/css/scss/components/_sideRoad.scss
+++ b/src/assets/css/scss/components/_sideRoad.scss
@@ -1,10 +1,10 @@
 /* 背景格子 */
 .secRoad{
     height:100%;
-    background-color: white;
+    background-color: $road-bg;
   }
   .secRoad-column{
-    border: 1px solid rgba(128, 128, 128, 0.219);
+    border: 1px solid $road-bg-border;
     width:4.54545454%; /*調整欄寬 */
     height: 100%;
   }
@@ -15,7 +15,7 @@
   .secRoad-row{
     height:8.33333333333333333%;
     width:100%;
-    border: 1px solid rgba(128, 128, 128, 0.219);
+    border: 1px solid $road-bg-border;
   }
 /* 共用區 */
 .sideWidth{   /*用來統一調整sideRode佔寬比 */
