--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -1,6 +1,9 @@
 //顏色變數
 $mainColor:#644d31;
 $grey:rgb(56, 55, 55);
+$font_red:#EF5766;
+$font_yellow:#E1BD33;
+$font_green:#59C68D;
 //注區顏色
 $betArea_yellow:#E1BD33;
 $betArea_red:#F44224;
