--- a/src/assets/css/scss/util/_util.scss
+++ b/src/assets/css/scss/util/_util.scss
@@ -72,6 +72,15 @@
 .fs-larger{
     font-size: larger;
 }
+.red{
+	color:$font_red;
+}
+.yellow{
+	color: $font_yellow;
+}
+.green{
+	color: $font_green;
+}
 .font_red{
 	color: $betArea_red;
 }
