--- a/src/assets/css/scss/layout/_header.scss
+++ b/src/assets/css/scss/layout/_header.scss
@@ -19,9 +19,30 @@
 .header-tableInfo{
 	width:150px;
 }
+.header-bottom-mobil{
+	z-index:1;
+	.navbar{
+		padding:0px;
+	}
+	.navbar-dark .navbar-toggler{
+		border:none;
+	}
+}
+.bi-list-ul::before{
+	color:#9B7524;
+	font-size: 2.8rem;
+	vertical-align: -1.1rem;
+}
+.bi-box-arrow-right{
+	margin-top:-7px;
+	margin-left:5px;
+	color:#9B7524;
+	font-size: 2.8rem;
+}
 .header-bottom-mobil-extend{
 	left:0;
 	right:0;
+	z-index:-1;
 }
 .disabled,.disabled:hover{
     background: gray !important;
