--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -744,6 +744,12 @@
   .header {
     height: 40px;
   }
+  .bi-list-ul::before{
+    font-size: 2.5rem;
+  }
+  .bi-box-arrow-right{
+    font-size: 2.5rem;
+  }
   .table-btn-list{
     max-width:300px;
     overflow:scroll;
@@ -1049,6 +1055,12 @@
   }
   .header {
     height: 30px;
+  }
+  .bi-list-ul::before{
+    font-size: xx-large;
+  }
+  .bi-box-arrow-right{
+    font-size: xx-large;
   }
   .newsTicker{
     height:25px;
