--- a/src/assets/css/scss/layout/_grid.scss
+++ b/src/assets/css/scss/layout/_grid.scss
@@ -5,9 +5,8 @@
 .header{
 	float: left;
 	width: 10%;
-	background-color: #1e1101;
-	border: 1px solid #654d31;
-	background-image: url(../../images/left-bg.jpg);
+	// background: linear-gradient(180deg,#41514A 0%,#3B3B3B 1%,#1E1E1F 100%);
+	background: linear-gradient(180deg,#41514A 0%,#404542 10%,#3B3B3B 11%,#1E1E1F 100%);
 	background-repeat: no-repeat;
 	background-position: left top;
 	position: relative;
