--- a/src/assets/css/scss/components/_buttom.scss
+++ b/src/assets/css/scss/components/_buttom.scss
@@ -3,7 +3,7 @@
 -------------------------------------------*/
 .header-btn{
 	width:85%;
-	display: inline-block;
+	position:relative;
 	line-height: 1.75rem;
 	text-align: center;
 	white-space: nowrap;
@@ -12,25 +12,30 @@
 	touch-action: manipulation;
 	cursor: pointer;
 	font-size: 136%;
-	// font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
 	text-decoration: none;
-	color: #fff6d5;
+	color: $accent_green;
 	padding:5px 0px;
 	margin: 5px 10px;
-	border: 0px solid #d0c0a4;
-	background-color: #ae8b27;
-	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ae8b27+0,775124+99 */
-	background: rgb(174,139,39); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(174,139,39,1) 0%, rgba(119,81,36,1) 99%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top,  rgba(174,139,39,1) 0%,rgba(119,81,36,1) 99%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom,  rgba(174,139,39,1) 0%,rgba(119,81,36,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae8b27', endColorstr='#775124',GradientType=0 ); /* IE6-9 */
+	border: 1px solid #202120;
+	background:linear-gradient(180deg,#3D4442 0%,#303231 100%);
 	border-radius: 10px;
-	box-shadow: 0px 0px 0px #9e9e9e;
+	box-shadow: 0px 0px 1px #202120,inset 0px 0px 5px #5A605E;
+}
+.header-btn::before{
+	content: "";
+	position: absolute;
+	left:-10%;
+	top:-10%;
+	transform: translate(7%,0%);
+	width:106%;
+	height:120%;
+	border-radius: inherit;
+	border:1px solid $primary_color;
+	box-shadow: inset 0px 0px 5px #3C3C3C;
 }
 .header-btn.active,header-btn.active.focus,.header-btn.active:focus,.header-btn.focus,.header-btn:active.focus,.header-btn:active:focus,.header-btn:focus{
 	background-color: #f22e89 !important;
-    border: black 2px solid;
+    // border: black 2px solid;
 }
 .header-btn.active.focus,.header-btn.active:focus,.header-btn.focus,.header-btn:active.focus,.header-btn:active:focus,.header-btn:focus{
 	outline: thin dotted;
