--- a/src/assets/css/scss/layout/_footer.scss
+++ b/src/assets/css/scss/layout/_footer.scss
@@ -3,11 +3,7 @@
 -------------------------------------------*/
 .footer{
 	z-index:1;
-	background: rgb(51,29,2); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(51,29,2,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top,  rgba(51,29,2,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom,  rgba(51,29,2,1) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#331d02', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(180deg,#41514A 0%,#404542 10%,#3B3B3B 11%,#1E1E1F 100%);
 	border-top-width: 1px;
 	border-top-style: solid;
 	border-top-color: #9a8326;
