--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -329,9 +329,6 @@
   }
 }
 @media screen and (max-width: 1024px) {
-  .header {
-    background-image: none;
-  }
   .home{
     width:100%;
   }
@@ -414,7 +411,6 @@
   .video-box {
     width: 100%;
     height: 575px;
-    border-bottom: none;
   }
   .card-wrap{
     bottom:30%;
@@ -434,6 +430,7 @@
   }
   .betArea {
     width: 100%;
+    border-top: 3px solid black;
   }
   .betArea-item1{
     border-top:none;
@@ -565,18 +562,6 @@
   .card-box {
     margin-top: -20px;
   }
-  // .playerNum,
-  // .bankerNum {
-  //   font-size: 2.5rem;
-  // }
-  // .playerNum {
-  //   left: 20%;
-  //   top: 10%;
-  // }
-  // .bankerNum {
-  //   right: 20%;
-  //   top: 10%;
-  // }
   //珠仔路
   .BeadPlate-B {
     //莊
@@ -702,10 +687,10 @@
     @include hisRoadSpritePosition(-1400, 0, 0.09);
   }
   //蟑螂路
-  cockroach-red {
+  .cockroach-red {
     @include hisRoadSpritePosition(-1300, 0, 0.09);
   }
-  cockroach-blue {
+  .cockroach-blue {
     @include hisRoadSpritePosition(-1500, 0, 0.09);
   }
   //和局數字
@@ -786,9 +771,6 @@
   }
   .betArea-item-bottom {
     bottom: 5%;
-  }
-  .bettingArea-btn-betInfo {
-    font-size: 14px;
   }
   .tabsArea {
     display: none;
@@ -1097,9 +1079,6 @@
   }
   .betStatus{
     line-height: 0.5rem;
-  }
-  .bettingArea-btn-betInfo {
-    font-size: 12px;
   }
   .chatInput-emoji{
     left:-50%;
