--- a/src/assets/css/scss/layout/_header.scss
+++ b/src/assets/css/scss/layout/_header.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	overflow: hidden;
 }
 .header-btnList{
 	float: left;
@@ -43,6 +44,9 @@
 	left:0;
 	right:0;
 	z-index:-1;
+}
+.extend-content{
+	height:50px;
 }
 .disabled,.disabled:hover{
     background: gray !important;
