--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -2107,14 +2107,14 @@ a.btn.disabled, fieldset[disabled] a.btn {
   z-index: 10;
 }
 
-.gameResultLoading {
+.gameStatusMsg {
   top: 35%;
   background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(50%, blue), to(transparent));
   background: linear-gradient(90deg, transparent 0%, blue 50%, transparent 100%);
   z-index: 9;
 }
 
-.gameResultLoading p {
+.gameStatusMsg p {
   text-align: center;
   font-size: 400%;
   font-weight: bolder;
