--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -3,7 +3,7 @@
     text-align: center;
     z-index: 10;
 }
-.gameResultLoading{
+.gameStatusMsg{
     top:35%;
     background:linear-gradient(90deg,transparent 0%,blue 50%,transparent 100%);
     z-index: 9;
