修正遊戲結果顯示的字沒有margin-top問題

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1505,6 +1505,10 @@ a.btn.disabled, fieldset[disabled] a.btn {
           justify-content: center;
 }
 
+.gameResult-content ul {
+  margin-top: 1rem;
+}
+
 .askRoadanimation {
   -webkit-animation-name: askRoad;
           animation-name: askRoad;
