--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -122,7 +122,7 @@ img {
   cursor: pointer;
   border: 5px solid #644d31;
   border-radius: 5px;
-  width: 30.2%;
+  margin-right: 20px;
 }
 
 .tableList {
@@ -131,9 +131,9 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
